@@ -1,5 +1,7 @@
 package lesson19;
 
+import lesson2.crossword.A;
+
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -20,32 +22,42 @@ public class EmpTester {
                 )
         );
 
-
+        // распечатайте самого молодого работника
+        System.out.println("===самый молодой===");
         employees.stream()
                 .min(Comparator.comparingInt(Emp::getAge))
                 .ifPresent(System.out::println);
 
+        employees.stream()
+                .sorted(Comparator.comparing(Emp::getAge))
+                .findFirst()
+                .ifPresent(System.out::println);
+
+        // распечатайте фамилии всех женщин - оканчивающиеся на "a"
+        // Filimonova , Drogova
+        System.out.println("===фамилии женщин===");
         System.out.println(
                 employees.stream()
                         .filter(e -> e.getName().endsWith("a"))
-                        .map(emp -> emp.getName().split(" ")[1])
-                        .toList()
+                        .map(e -> e.getName().split(" ")[1])
+                        .collect(Collectors.toList())
         );
 
-        employees.stream()
-                .mapToDouble(Emp::getAge)
-                .average()
-                .ifPresent(System.out::println);
-
-        System.out.println(employees.stream()
-                .filter(e -> e.getPosition().equals("programmer"))
-                .filter(e -> !e.getName().endsWith("a"))
-                .count()
-        );
-
+        // найдите средний возраст
+        System.out.println("===средний возраст===");
         System.out.println(
                 employees.stream()
-                        .collect(Collectors.groupingBy(e -> e.getAge() >= 40))
+                        .mapToDouble(Emp::getAge)
+                        .average()
+        );
+
+        // посчитайте программистов мужчин
+        System.out.println("===количество программистов мужчин===");
+        System.out.println(
+                employees.stream()
+                        .filter(e -> e.getPosition().equals("programmer"))
+                        .filter(e -> !e.getName().endsWith("a"))
+                        .count()
         );
 
         // разделите всех работников на 2 группы
@@ -60,24 +72,36 @@ public class EmpTester {
                         );
         System.out.println(emps);
 
-        System.out.println(emps.get(false).stream().max(Comparator.comparing(Emp::getAge)));
+        // найдите профессию самого старшего из "молодых" -
+        // тех кому <= 40 лет
+        System.out.println("===профессия самого старшего из 'молодых'===");
+        emps.get(false).stream()
+                .max(Comparator.comparing(Emp::getAge))
+                .ifPresent(System.out::println);
 
-        System.out.println(
-                employees.stream()
-                        .collect(Collectors.groupingBy(Emp::getPosition))
-
-        );
-
+        // сгруппируйте всех работников по професии
+        System.out.println("===работники по профессии===");
         Map<String, List<Emp>> byProfession =
                 employees.stream()
-                        .collect(Collectors.groupingBy(Emp::getPosition));
-        System.out.println(byProfession);
+                        .collect(
+                                Collectors.groupingBy(Emp::getPosition)
+                        );
+        System.out.println(
+                byProfession
+        );
 
+        // посчитаем количество людей в профессии
+        System.out.println("===количество работников по профессии===");
         System.out.println(
                 byProfession.entrySet().stream()
-                        .collect(Collectors.toMap(Map.Entry::getKey,
-                                pair -> pair.getValue().size()))
+                        .collect(
+                                Collectors.toMap(
+                                        pair -> pair.getKey(),
+                                        pair -> pair.getValue().size()
+                                )
+                        )
         );
+
         // Вернуть средний возраст мужчин и женщин - у женщин фамилия оканчивается на "a" -
         // в виде Map<Boolean, Double> - ключ "true" соответствует женщинам
         System.out.println("===средний возраст женщин и мужчин===");
@@ -99,7 +123,7 @@ public class EmpTester {
 
         );
 
-// Распечатать работников с самым часто встречающимся возрастом
+        // Распечатать работников с самым часто встречающимся возрастом
         System.out.println("===работники с самым частым возрастом===");
         employees.stream()
                 .collect(
@@ -108,9 +132,8 @@ public class EmpTester {
                 .entrySet().stream()
                 .sorted((p1, p2) -> p2.getValue().size() - p1.getValue().size())
                 .limit(1)
-                .map(Map.Entry::getValue)
+                .map(pair -> pair.getValue())
                 .forEach(System.out::println);
-
-
     }
+
 }
